--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
+
 .header {
 	background-image: url('img/skyline4.jpg');
 	background-repeat: no-repeat;
@@ -9,6 +14,7 @@
 .main-title {
 	color: #fff;
 	text-shadow: 3px 3px #444;
+	font-size: 48pt;
 }
 
 .footer {
@@ -16,4 +22,13 @@
 	height: 200px;
 	color: #fff;
 	padding: 50px;
+}
+
+@media (max-width: 991.98px) {
+	.main-title {
+		font-size: 30pt;
+	}
+	.header {
+		min-height: 300px;
+	}
 }
