--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,11 @@
 	background-color: #002966;
 	min-height: 75px;
 }
-.footer.gamma {
-	background-color: #002966;
+
+.footer-gamma {
+	background-size: cover;
+	background-image: url("../img/fons.jpg");
 	min-height: 75px;
+	text-shadow: 1px 1px #000;
+	background-position: 0% 30%;
 }
