--- a/18ywgmc/style.css
+++ b/18ywgmc/style.css
@@ -9,6 +9,10 @@
 	padding-bottom: 50px;
 }
 
+.justify {
+	text-align: justify;
+}
+
 nav.navbar {
 	background-color: #fff !important;
 	font-weight: 600;
