--- a/18ywgmc/style.css
+++ b/18ywgmc/style.css
@@ -65,3 +65,45 @@ td a { color: black; }
 .table-striped>tbody>tr:nth-child(odd)>th {
  background-color: #fce8d6;
 }
+
+
+
+
+
+
+
+
+.my-row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.my-column {
+  flex: 50%;
+  max-width: 50%;
+  padding: 0 4px;
+}
+
+.my-column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 100%) {
+  .my-column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 100%) {
+  .my-column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
